syntax = "proto3";

option csharp_namespace = "Swisschain.SwisschainProductName.ServiceName.ApiContract";

package common;

service Monitoring {
	rpc IsAlive (IsAliveRequest) returns (IsAliveResponse);
}

message IsAliveRequest {
}

message IsAliveResponse {
	string name = 1;
	string version = 2;
	string startedAt = 3;
}
